final touches for the day: Aligned toggle text. Fixed svg color on dark mode

--- a/index.css
+++ b/index.css
@@ -3,12 +3,16 @@
   --text-color: #000000;       /* Light mode text color */
   --inline-padding: 5px;
   --form-color: rgb(231, 237, 248);
+  --svg-fill: #1d0303;
+  --big-text-color: #2f0682;
 }
 
 [data-theme='dark'] {
   --background-color: #181818; /* Dark mode background */
   --text-color: #ffffff;       /* Dark mode text color */
   --form-color: rgb(19, 28, 46);
+  --svg-fill: #ffffff;
+  --big-text-color: #208bfe;
 }
 
 body {
@@ -81,7 +85,7 @@ a {
 }
 
 .hi2 {
-  color: #2f0682;
+  color: var(--big-text-color);
 }
 
 .brief_desc {
@@ -155,7 +159,7 @@ a {
 .social-media-links svg {
   width: 2rem;
   height: 2rem;
-  fill: #1d0303;
+  fill: var(--svg-fill);
   transition: fill 0.3s;
 }
 
